test/tests/stages/16_characters_and_strings/valid/strings_as_lvalues/simple.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  *
  identifier(x)
  =
  string literal("Hello, World!")
  ;
  return
  identifier(x)
  [
  const int(2)
  ]
  ;
  }
