test/tests/stages/16_characters_and_strings/invalid_types/implicit_conversion_pointers_to_different_size_arrays.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  (
  *
  identifier(string_pointer)
  )
  [
  const int(10)
  ]
  =
  &
  string literal("x")
  ;
  return
  const int(0)
  ;
  }
